--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -3,18 +3,15 @@ services:
     build: .
     ports:
       - 127.0.0.1:3000:3000
-    command: npm run start
     environment:
-      MYSQL_HOST: mysql:3306
-    env_file:
-      - .env
+      ENVIRONMENT: prod
+    command: npm run start
   mysql:
     image: mysql:8.3
     volumes:
       - mysql-data:/var/lib/mysql
     env_file:
       - .env
-    environment:
-      MYSQL_ROOT_PASSWORD: very_secret_pwd
+      - .db.env
 volumes:
   mysql-data:
